# Adapter

./: .gitignore  AmlOpcParser.py  Error.md  README.md  docker-compose.yml  dockerfile  mobos.json
Consul/: Consul.py  dockerfile  main.py
Minio/: dockerfile  main.py  main.sh
Parser/: Callback.py  Parser.py  __init__.py  dockerfile  main.py
ProtocolMapping/src/: CMakeLists.txt  README.md  mapping.proto  mapping_server.cc
source/: AmlOpcParser.py
source/Consul/: __init__.py
source/Parser/: Opc.Ua.AMLBaseTypes.NodeSet2.xml  __init__.py
